--- a/public/assets/css/table.css
+++ b/public/assets/css/table.css
@@ -21,3 +21,10 @@ div img {
     margin:auto;
 }
 
+.centered {
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
