--- a/public/assets/css/table.css
+++ b/public/assets/css/table.css
@@ -41,6 +41,16 @@ div img {
     transform: translate(-50%, -50%);
 }
 
+#skip {
+    color: navy;
+    position: absolute;
+    width: 106px;
+    height: 40px;
+    top: 30%;
+    left: 40%;
+    transform: translate(-50%, -50%);
+}
+
 #question {
     position: absolute;
     width: 700px;
@@ -50,13 +60,43 @@ div img {
     transform: translate(-50%, -50%);
 }
 
-#skip {
-    color: navy;
-    position: absolute;
-    width: 106px;
+#option_1 {
+    width: 200px;
     height: 40px;
-    top: 30%;
+    font-size: 20px;
+    position: absolute;
+    top: 48%;
     left: 40%;
+    transform: translate(-50%, -50%);
+}
+
+#option_2 {
+    width: 200px;
+    height: 40px;
+    font-size: 20px;
+    position: absolute;
+    top: 48%;
+    left: 58%;
+    transform: translate(-50%, -50%);
+}
+
+#option_3 {
+    width: 200px;
+    height: 40px;
+    font-size: 20px;
+    position: absolute;
+    top: 58%;
+    left: 40%;
+    transform: translate(-50%, -50%);
+}
+
+#option_4 {
+    width: 200px;
+    height: 40px;
+    font-size: 20px;
+    position: absolute;
+    top: 58%;
+    left: 58%;
     transform: translate(-50%, -50%);
 }
 
